# server/pkg/pb/agentpb/agent_grpc.pb.go
@@ -1,8 +1,4 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.15.6
-// source: agent.proto
 
 package agentpb
 
@@ -24,6 +20,7 @@ const _ = grpc.SupportPackageIsVersion7
 type AgentClient interface {
 	SubmitJob(ctx context.Context, in *JobRequest, opts ...grpc.CallOption) (*JobResponse, error)
 	StoreCred(ctx context.Context, in *StoreCredRequest, opts ...grpc.CallOption) (*StoreCredResponse, error)
+	StoreSecret(ctx context.Context, in *StoreSecretRequest, opts ...grpc.CallOption) (*StoreSecretResponse, error)
 	ClimonAppInstall(ctx context.Context, in *ClimonInstallRequest, opts ...grpc.CallOption) (*JobResponse, error)
 	ClimonAppDelete(ctx context.Context, in *ClimonDeleteRequest, opts ...grpc.CallOption) (*JobResponse, error)
 	DeployerAppInstall(ctx context.Context, in *ApplicationInstallRequest, opts ...grpc.CallOption) (*JobResponse, error)
@@ -56,6 +53,15 @@ func (c *agentClient) SubmitJob(ctx context.Context, in *JobRequest, opts ...grp
 func (c *agentClient) StoreCred(ctx context.Context, in *StoreCredRequest, opts ...grpc.CallOption) (*StoreCredResponse, error) {
 	out := new(StoreCredResponse)
 	err := c.cc.Invoke(ctx, "/agentpb.Agent/StoreCred", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *agentClient) StoreSecret(ctx context.Context, in *StoreSecretRequest, opts ...grpc.CallOption) (*StoreSecretResponse, error) {
+	out := new(StoreSecretResponse)
+	err := c.cc.Invoke(ctx, "/agentpb.Agent/StoreSecret", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -158,6 +164,7 @@ func (c *agentClient) ProjectDelete(ctx context.Context, in *ProjectDeleteReques
 type AgentServer interface {
 	SubmitJob(context.Context, *JobRequest) (*JobResponse, error)
 	StoreCred(context.Context, *StoreCredRequest) (*StoreCredResponse, error)
+	StoreSecret(context.Context, *StoreSecretRequest) (*StoreSecretResponse, error)
 	ClimonAppInstall(context.Context, *ClimonInstallRequest) (*JobResponse, error)
 	ClimonAppDelete(context.Context, *ClimonDeleteRequest) (*JobResponse, error)
 	DeployerAppInstall(context.Context, *ApplicationInstallRequest) (*JobResponse, error)
@@ -180,6 +187,9 @@ func (UnimplementedAgentServer) SubmitJob(context.Context, *JobRequest) (*JobRes
 }
 func (UnimplementedAgentServer) StoreCred(context.Context, *StoreCredRequest) (*StoreCredResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method StoreCred not implemented")
+}
+func (UnimplementedAgentServer) StoreSecret(context.Context, *StoreSecretRequest) (*StoreSecretResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method StoreSecret not implemented")
 }
 func (UnimplementedAgentServer) ClimonAppInstall(context.Context, *ClimonInstallRequest) (*JobResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ClimonAppInstall not implemented")
@@ -256,6 +266,24 @@ func _Agent_StoreCred_Handler(srv interface{}, ctx context.Context, dec func(int
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AgentServer).StoreCred(ctx, req.(*StoreCredRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Agent_StoreSecret_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(StoreSecretRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AgentServer).StoreSecret(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/agentpb.Agent/StoreSecret",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AgentServer).StoreSecret(ctx, req.(*StoreSecretRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -454,6 +482,10 @@ var Agent_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "StoreCred",
 			Handler:    _Agent_StoreCred_Handler,
+		},
+		{
+			MethodName: "StoreSecret",
+			Handler:    _Agent_StoreSecret_Handler,
 		},
 		{
 			MethodName: "ClimonAppInstall",
